2005-11-03  Damien Sandras  <dsandras@gnome.org>

	* src/chat_window.cpp: Fixed "close" tab so that it closes the tab 
	for which the button is clicked and not the current tab.

2005-11-03  Damien Sandras  <dsandras@gnome.org>

	* src/urlhandler.cpp: Fixed GetCanonicalURL.

2005-11-03  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented getting a call token's protocol.

2005-11-02  Damien Sandras  <dsandras@gnome.org>

	* src/urlhandler.cpp: Fixed GetCanonicalURL.

	* src/sipendpoint.cpp: Changed timeouts again.

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the GetCallsList and
	ResignalCallInfo methods of the net.gnomemeeting.calls interface ;
	still lacks finding out a call token's protocol though.

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the Transfer method of the
	net.gnomemeeting.calls interface.

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the PlayPause method of the
	net.gnomemeeting.calls interface.

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the Disconnect method of the
	net.gnomemeeting.calls interface.

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the Connect method of the
	net.gnomemeeting.calls interface (known problematic : see comment).

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Removed now useless FIXMEs.

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the Shutdown method of the
	net.gnomemeeting.self interface (hence now it is completely
	implemented !).

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the GetLocalAddress method of
	the net.gnomemeeting.self interface.

2005-11-02  Julien Puydt  <jpuydt@free.fr>

	* src/dbus_component.cpp: Implemented the GetComment and GetLocation
	methods of the net.gnomemeeting.self interface.
